<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".LogInActivity">
    <ImageView
        android:id="@+id/avgLogo"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/avglogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/PhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/avgLogo"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/phonenumber"/>
    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/PhoneNo"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Password"
        android:padding="8dp"
        android:background="@color/teal_700"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fotgot_password"
        android:layout_below="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:padding="6dp"/>
    <TextView
        android:id="@+id/registet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:textSize="16dp"
        android:padding="6dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>